project( SGAL )

set( SGAL_SRCS assertions.cpp )
set( SGAL_SRCS ${SGAL_SRCS} Event_handler.cpp )
set( SGAL_SRCS ${SGAL_SRCS} Event.cpp )

# engines
set( SGAL_SRCS ${SGAL_SRCS} Sphere_plane_intersection.cpp )
set( SGAL_SRCS ${SGAL_SRCS} Incrementor.cpp )

# events:
set( SGAL_SRCS ${SGAL_SRCS} Draw_event.cpp )
set( SGAL_SRCS ${SGAL_SRCS} Keyboard_event.cpp )
set( SGAL_SRCS ${SGAL_SRCS} Mouse_event.cpp )
set( SGAL_SRCS ${SGAL_SRCS} Motion_event.cpp )
set( SGAL_SRCS ${SGAL_SRCS} Passive_motion_event.cpp )
set( SGAL_SRCS ${SGAL_SRCS} Redraw_event.cpp )
set( SGAL_SRCS ${SGAL_SRCS} Reset_event.cpp )
set( SGAL_SRCS ${SGAL_SRCS} Reshape_event.cpp )
set( SGAL_SRCS ${SGAL_SRCS} Simulate_event.cpp )
set( SGAL_SRCS ${SGAL_SRCS} Start_event.cpp )
set( SGAL_SRCS ${SGAL_SRCS} Stop_event.cpp )
set( SGAL_SRCS ${SGAL_SRCS} Tick_event.cpp )

# Parser:
set( SGAL_SRCS ${SGAL_SRCS} Element.cpp )

# scene_graph:
set( SGAL_SRCS ${SGAL_SRCS} Accumulation.cpp )
set( SGAL_SRCS ${SGAL_SRCS} Appearance.cpp )
set( SGAL_SRCS ${SGAL_SRCS} Arc.cpp )
set( SGAL_SRCS ${SGAL_SRCS} Background.cpp )
set( SGAL_SRCS ${SGAL_SRCS} Bindable_node.cpp )
set( SGAL_SRCS ${SGAL_SRCS} Bindable_stack.cpp )
set( SGAL_SRCS ${SGAL_SRCS} Box.cpp )
set( SGAL_SRCS ${SGAL_SRCS} Camera.cpp )
set( SGAL_SRCS ${SGAL_SRCS} Collision.cpp )
set( SGAL_SRCS ${SGAL_SRCS} Color_background.cpp )
set( SGAL_SRCS ${SGAL_SRCS} Color_map.cpp )
set( SGAL_SRCS ${SGAL_SRCS} Cone.cpp )
set( SGAL_SRCS ${SGAL_SRCS} Configuration.cpp )
set( SGAL_SRCS ${SGAL_SRCS} Container.cpp )
set( SGAL_SRCS ${SGAL_SRCS} Container_factory.cpp )
set( SGAL_SRCS ${SGAL_SRCS} Container_proto.cpp )
set( SGAL_SRCS ${SGAL_SRCS} Context.cpp )
set( SGAL_SRCS ${SGAL_SRCS} Color_array.cpp )
set( SGAL_SRCS ${SGAL_SRCS} Coord_array.cpp )
set( SGAL_SRCS ${SGAL_SRCS} Coord_transformer.cpp )
set( SGAL_SRCS ${SGAL_SRCS} Coord_minkowski.cpp )
set( SGAL_SRCS ${SGAL_SRCS} Cull_context.cpp )
set( SGAL_SRCS ${SGAL_SRCS} Cylinder.cpp )
set( SGAL_SRCS ${SGAL_SRCS} Cylindrical_patch.cpp )
set( SGAL_SRCS ${SGAL_SRCS} Directional_light.cpp )
set( SGAL_SRCS ${SGAL_SRCS} Draw_action.cpp )
set( SGAL_SRCS ${SGAL_SRCS} Ellipsoid.cpp )
set( SGAL_SRCS ${SGAL_SRCS} Environment_background.cpp )
set( SGAL_SRCS ${SGAL_SRCS} Extrusion.cpp )
set( SGAL_SRCS ${SGAL_SRCS} Field.cpp )
set( SGAL_SRCS ${SGAL_SRCS} Font.cpp )
set( SGAL_SRCS ${SGAL_SRCS} Font_style.cpp )
set( SGAL_SRCS ${SGAL_SRCS} Frustum.cpp )
set( SGAL_SRCS ${SGAL_SRCS} Geo_set.cpp )
set( SGAL_SRCS ${SGAL_SRCS} Gfx_conf.cpp )

# ifeq ($(USE_GLUT), 1)
# CPPSOURCES+= Glut_font.cpp
# endif

set( SGAL_SRCS ${SGAL_SRCS} Gl_wrapper.cpp )
set( SGAL_SRCS ${SGAL_SRCS} Group.cpp )
set( SGAL_SRCS ${SGAL_SRCS} Geometry.cpp )
set( SGAL_SRCS ${SGAL_SRCS} Image.cpp )
set( SGAL_SRCS ${SGAL_SRCS} Image_background.cpp )
set( SGAL_SRCS ${SGAL_SRCS} Image_sphere_environment.cpp )
set( SGAL_SRCS ${SGAL_SRCS} Image_texture.cpp )
set( SGAL_SRCS ${SGAL_SRCS} Imagemagick_font.cpp )
set( SGAL_SRCS ${SGAL_SRCS} Indexed_face_set.cpp )
set( SGAL_SRCS ${SGAL_SRCS} Indexed_line_set.cpp )
set( SGAL_SRCS ${SGAL_SRCS} Indexed_face_set_draw.cpp )
set( SGAL_SRCS ${SGAL_SRCS} initialize.cpp )
set( SGAL_SRCS ${SGAL_SRCS} Item_primitive.cpp )
set( SGAL_SRCS ${SGAL_SRCS} Light.cpp )
set( SGAL_SRCS ${SGAL_SRCS} Loader.cpp )
set( SGAL_SRCS ${SGAL_SRCS} Isect_action.cpp )
set( SGAL_SRCS ${SGAL_SRCS} Material.cpp )
set( SGAL_SRCS ${SGAL_SRCS} Math_defs.cpp )
set( SGAL_SRCS ${SGAL_SRCS} Mesh_set.cpp )
set( SGAL_SRCS ${SGAL_SRCS} Multisample.cpp )
set( SGAL_SRCS ${SGAL_SRCS} Navigation_info.cpp )
set( SGAL_SRCS ${SGAL_SRCS} Node.cpp )
set( SGAL_SRCS ${SGAL_SRCS} Normal_array.cpp )
set( SGAL_SRCS ${SGAL_SRCS} Piece.cpp )
set( SGAL_SRCS ${SGAL_SRCS} Point_light.cpp )
# CPPSOURCES+= Record_action.cpp
set( SGAL_SRCS ${SGAL_SRCS} Rotation.cpp )
set( SGAL_SRCS ${SGAL_SRCS} Route.cpp )
set( SGAL_SRCS ${SGAL_SRCS} Scene_graph.cpp )
set( SGAL_SRCS ${SGAL_SRCS} Simulation.cpp )
set( SGAL_SRCS ${SGAL_SRCS} Shape.cpp )
set( SGAL_SRCS ${SGAL_SRCS} Snapshot.cpp )
set( SGAL_SRCS ${SGAL_SRCS} Sphere.cpp )
set( SGAL_SRCS ${SGAL_SRCS} Sphere_bound.cpp )
set( SGAL_SRCS ${SGAL_SRCS} Sphere_environment.cpp )
set( SGAL_SRCS ${SGAL_SRCS} Spot_light.cpp )
set( SGAL_SRCS ${SGAL_SRCS} Switch.cpp )
set( SGAL_SRCS ${SGAL_SRCS} Tex_coord_array.cpp )
set( SGAL_SRCS ${SGAL_SRCS} Tex_gen.cpp )
# CPPSOURCES+= Text_texture.cpp
set( SGAL_SRCS ${SGAL_SRCS} Text.cpp )
set( SGAL_SRCS ${SGAL_SRCS} Texture.cpp )
set( SGAL_SRCS ${SGAL_SRCS} Texture_font.cpp )
set( SGAL_SRCS ${SGAL_SRCS} Texture_transform.cpp )
set( SGAL_SRCS ${SGAL_SRCS} Torus.cpp )
set( SGAL_SRCS ${SGAL_SRCS} Trace.cpp )
set( SGAL_SRCS ${SGAL_SRCS} Transform.cpp )
set( SGAL_SRCS ${SGAL_SRCS} World_info.cpp )

# Sensors:s
set( SGAL_SRCS ${SGAL_SRCS} Drag_sensor.cpp )
set( SGAL_SRCS ${SGAL_SRCS} Key_sensor.cpp )
set( SGAL_SRCS ${SGAL_SRCS} Navigation_sensor.cpp )
set( SGAL_SRCS ${SGAL_SRCS} Proximity_sensor.cpp )
set( SGAL_SRCS ${SGAL_SRCS} Single_key_sensor.cpp )
set( SGAL_SRCS ${SGAL_SRCS} Time_sensor.cpp )
set( SGAL_SRCS ${SGAL_SRCS} Touch_sensor.cpp )

# Geometry:
set( SGAL_SRCS ${SGAL_SRCS} Matrix3f.cpp )
set( SGAL_SRCS ${SGAL_SRCS} Matrix4f.cpp )
set( SGAL_SRCS ${SGAL_SRCS} Plane.cpp )
set( SGAL_SRCS ${SGAL_SRCS} Url_image.cpp )
set( SGAL_SRCS ${SGAL_SRCS} Utilities.cpp )
set( SGAL_SRCS ${SGAL_SRCS} Vector2f.cpp )
set( SGAL_SRCS ${SGAL_SRCS} Vector2sh.cpp )
set( SGAL_SRCS ${SGAL_SRCS} Vector3f.cpp )
set( SGAL_SRCS ${SGAL_SRCS} Vector3sh.cpp )
set( SGAL_SRCS ${SGAL_SRCS} Vector4f.cpp )

# Utilities:
set( SGAL_SRCS ${SGAL_SRCS} Generic_option_parser.cpp )
set( SGAL_SRCS ${SGAL_SRCS} Bench_option_parser.cpp )
set( SGAL_SRCS ${SGAL_SRCS} Conf_option_parser.cpp )
set( SGAL_SRCS ${SGAL_SRCS} Option_parser.cpp )
set( SGAL_SRCS ${SGAL_SRCS} Native_window_item.cpp )
set( SGAL_SRCS ${SGAL_SRCS} Window_option_parser.cpp )
set( SGAL_SRCS ${SGAL_SRCS} $(WS), console) )
set( SGAL_SRCS ${SGAL_SRCS} Windows_window_item.cpp )
set( SGAL_SRCS ${SGAL_SRCS} Windows_window_manager.cpp )

#ifeq ($(WS), X11)
set( SGAL_SRCS ${SGAL_SRCS} X11_window_item.cpp )
set( SGAL_SRCS ${SGAL_SRCS} X11_window_manager.cpp )
#endif

# Interpolators:
set( SGAL_SRCS ${SGAL_SRCS} Interpolator.cpp )
set( SGAL_SRCS ${SGAL_SRCS} Rotation_interpolator.cpp )
set( SGAL_SRCS ${SGAL_SRCS} Position_interpolator.cpp )
set( SGAL_SRCS ${SGAL_SRCS} Coordinate_interpolator.cpp )
set( SGAL_SRCS ${SGAL_SRCS} Vector3f_interpolator.cpp )
set( SGAL_SRCS ${SGAL_SRCS} Scalar_interpolator.cpp )
set( SGAL_SRCS ${SGAL_SRCS} Color_interpolator.cpp )

# IO
set( SGAL_SRCS ${SGAL_SRCS} Vrml_formatter.cpp )


add_library( SGAL ${SGAL_SRCS})

